--- a/eist_web_theme/static/src/components/scroll_top_button/scroll_top_button.scss
+++ b/eist_web_theme/static/src/components/scroll_top_button/scroll_top_button.scss
@@ -1,8 +1,36 @@
-.o_content,.o_kanban_renderer,.o_list_renderer
- {
+// 默认主题
+.o_web_client_theme_colore_0 {
+
+	.o_content,
+	.o_kanban_renderer,
+	.o_list_renderer,
+	.o_ChatterContainer .o_Chatter {
+		.o_scroll_top {
+			background-color: #009ef7;
+		}
+	}
+}
+
+// 其他主题
+@for $size from 1 through length($o-theme-colors) {
+	.o_web_client_theme_colore_#{$size} {
+		.o_content,
+		.o_kanban_renderer,
+		.o_list_renderer,
+		.o_ChatterContainer .o_Chatter {
+			.o_scroll_top {
+				background-color: nth($o-theme-colors, $size) !important;
+			}
+		}
+	}
+}
+
+// 通用样式
+.o_content,
+.o_kanban_renderer,
+.o_list_renderer,
+.o_ChatterContainer .o_Chatter {
 	.o_scroll_top {
-		// position: fixed;
-		// position: absolute;
 		animation: animation-scrolltop 0.4s ease-out 1;
 		display: flex;
 		opacity: 0.3;
@@ -12,55 +40,19 @@
 		align-items: center;
 		width: 36px;
 		height: 36px;
-		bottom: 43px;
+		bottom: 50px;
 		right: 20px;
-		background-color: #009ef7;
 		box-shadow: 0 0.5rem 1.5rem 0.5rem rgba(0, 0, 0, 0.075);
-		transition: color 0.2s ease;
+		transition: color 0.2s ease, background-color 0.2s ease;
 		border-radius: 0.475rem;
 
 		&:hover {
 			transition: color 0.2s ease;
 			opacity: 1;
-			background-color: 009ef7;
 		}
 
 		.svg-icon {
 			color: $o-white;
-		}
-	}
-}
-
-.o_ChatterContainer {
-	.o_Chatter {
-		.o_scroll_top {
-			// position: fixed;
-			// position: absolute;
-			animation: animation-scrolltop 0.4s ease-out 1;
-			display: flex;
-			opacity: 0.3;
-			cursor: pointer;
-			z-index: 105;
-			justify-content: center;
-			align-items: center;
-			width: 36px;
-			height: 36px;
-			bottom: 43px;
-			right: 20px;
-			background-color: #009ef7;
-			box-shadow: 0 0.5rem 1.5rem 0.5rem rgba(0, 0, 0, 0.075);
-			transition: color 0.2s ease;
-			border-radius: 0.475rem;
-
-			&:hover {
-				transition: color 0.2s ease;
-				opacity: 1;
-				background-color: 009ef7;
-			}
-
-			.svg-icon {
-				color: $o-white;
-			}
 		}
 	}
 }
