--- a/eist_web_theme/static/src/core/notebook/notebook.scss
+++ b/eist_web_theme/static/src/core/notebook/notebook.scss
@@ -1,4 +1,4 @@
-// Custom SCSS for EistErp version of notebook tabs
+// Custom SCSS for enterprise version of notebook tabs
 
 .o_notebook {
     --notebook-link-border-color: #{$border-color};
