--- a/eist_web_theme/static/src/core/theme_colorlist/theme_colorlist.scss
+++ b/eist_web_theme/static/src/core/theme_colorlist/theme_colorlist.scss
@@ -11,17 +11,18 @@
     }
 }
 
+
+
 @for $size from 1 through length($o-theme-colors) {
     .o_theme_colorlist_item_color_#{$size} {
-        $-bg: adjust-color(nth($o-theme-colors, $size), $lightness: 0%, $saturation: 0%);
-        $-color: adjust-color(nth($o-theme-colors, $size), $lightness: -5%, $saturation: -5%);
-        @include o-print-color($-bg, background-color, bg-opacity);
-        @include o-print-color($-color, color, text-opacity);
+        $-theme-base: nth($o-theme-colors, $size);
+        $-theme-bg: adjust-color($-theme-base, $lightness: 15%, $saturation: 0%);
+        $-theme-color: adjust-color($-theme-base, $lightness: -5%, $saturation: -5%);
+        background: linear-gradient(135deg, $-theme-color 0%, $-theme-bg 100%);
     }
 }
 
-// 设置 “no-color”，即白色背景上的红色条
+// 0.默认颜色
 .o_theme_colorlist_item_color_0 {
-    background: linear-gradient(45deg, rgba($dropdown-bg, 0) 0%, rgba($dropdown-bg, 0) 48%, $danger 48%, $danger 52%, rgba($dropdown-bg, 0) 52%, rgba($dropdown-bg, 0) 100%);
+    background: #e6edf5;
 }
-
