--- a/eist_web_theme/static/src/views/form/form_controller.xml
+++ b/eist_web_theme/static/src/views/form/form_controller.xml
@@ -2,7 +2,7 @@
 <templates xml:space="preserve">
 
     <!-- <t t-inherit="web.FormView" t-inherit-mode="extension">
-        <xpath expr="//div/[hasclass('o_form_view_container')]" position="after">
+        <xpath expr="//div[contains(concat(' ', @class, ' '), ' o_form_view_container ')]" position="after">
             <ScrollTopButton target="contentEl" show="state.showScrollTopButton"/>
         </xpath>
     </t> -->
