--- a/eist_web_theme/static/src/webclient/drawer_menu/drawer_menu_background.dark.scss
+++ b/eist_web_theme/static/src/webclient/drawer_menu/drawer_menu_background.dark.scss
@@ -3,6 +3,6 @@
 // No CSS hacks, variables overrides only
 
 .o_drawer_menu_background {
-    --homeMenu-bg-color: #000511;
-    --homeMenu-bg-image: url("/eist_web_theme/static/img/background-dark.jpg");
+    --drawerMenu-bg-color: #000511;
+    --drawerMenu-bg-image: url("/eist_web_theme/static/img/background-dark.jpg");
 }
