--- a/eist_web_theme/static/src/webclient/sidebar_menu/sidenav.variables.scss
+++ b/eist_web_theme/static/src/webclient/sidebar_menu/sidenav.variables.scss
@@ -9,17 +9,11 @@ $o-side-navbar-brand-height: 46px !default;
 $o-side-navbar-brand-padding-v: 10px !default;
 $o-side-navbar-brand-height-xs: 46px !default;
 $o-side-navbar-brand-height-lg: 40px !default;
-// $o-side-navbar-brand-height: $o-side-navbar-brand-height-lg !default;
-// $o-side-navbar-brand-background: $o-white !default;
-$o-side-navbar-brand-background: $o-default-color !default;
 $o-side-navbar-brand-border-bottom: 1px solid $o-gray-300 !default;
 
-// $o-sidebar-menu-background: linear-gradient(45deg, $o-brand-odoo, adjust-color($o-brand-odoo, $saturation: -8%, $lightness: -4%));
-$o-sidebar-menu-background: $o-white !default;
-// $o-sidebar-menu-background: $o-brand-odoo !default;
-$o-sidebar-menu-logo-background: linear-gradient(45deg, $o-brand-odoo, adjust-color($o-brand-odoo, $saturation: -8%, $lightness: -4%));
+$o-sidebar-menu-background: transparent !default;
+$o-sidebar-menu-logo-background: transparent !default;
 
-// $o-side-navbar-app-item-active-bg: $o-success !default;
 $o-side-navbar-item-hover-border: #36c6d3 !default;
 $o-side-navbar-item-hover-bg: #e9e9e9;
 $o-side-navbar-app-item-active-bg: $o-gray-100 !default;
@@ -30,6 +24,7 @@ $o-side-navbar-app-item-entry-active-bg: #36c6d3 !default;
 $o-side-navbar-app-item-entry-active-color: $o-gray-900 !default;
 $o-side-navbar-menu-item-entry-active-bg: #e9e9e9 !default;
 $o-side-navbar-menu-item-entry-active-color: $o-gray-900 !default;
+$o-side-navbar-item-entry-active-bg: rgba(255, 255, 255, 0.3)!default;
 
 $o-side-navbar-menu-item-badge-size: 11px !default;
 $o-side-navbar-menu-item-badge-size-adjust: 1px !default;
@@ -38,7 +33,7 @@ $o-side-navbar-menu-item-badge-bg: $o-success !default;
 
 $o-side-navbar-search-header-height-xs: 46px !default;
 $o-side-navbar-search-header-height-lg: 40px !default;
-$o-side-navbar-search-header-bg: $o-default-color;
+// $o-side-navbar-search-header-bg: $o-default-color;
 
 $o-side-navbar-search-container-size: 850px;
 $o-side-navbar-search-app-icon-max-width: 70px;
