--- a/eist_web_theme/views/res_config_settings_views.xml
+++ b/eist_web_theme/views/res_config_settings_views.xml
@@ -12,155 +12,13 @@
             </block> -->
 
 
-
-
             <div id="msg_eist_web_theme" position="replace" />
 
-            <div id="eist_apps" position="before">
+            <xpath expr="//field[@name='company_id']" position="before">
                 <widget name="res_config_eist_navigation" />
+            </xpath>
 
-                <field name="company_id" invisible="1" />
-                <setting type="header" string="Companies">
-                    <field name="company_id" options="{'no_open': True, 'no_create': True}"
-                        title="Settings on this page will apply to this company." class="w-100"/>
-                </setting>
-
-                <div id="brand_settings">
-                    <block title="Base Settings" name="eisterp_brand_setting_container">
-                        <div class="col-12 col-lg-6 o_setting_box" id="system_name_setting">
-                            <div class="o_setting_left_pane">
-                                <i class="fa fa-header" role="img"
-                                    aria-label="Browser Window Title Name"
-                                    title="Browser Window Title Name"></i>
-                            </div>
-                            <div class="o_setting_right_pane">
-                                <label for="system_name" />
-                                <div class="text-muted">
-                                    The title name displayed on the title bar or status bar of the
-                                    browser window. Similarly, when a document is added to the
-                                    user's link list or favorite or bookmark list, the title name
-                                    will become the default name of the document link.
-                                </div>
-                                <div class="content-group mt8">
-                                    <field name="system_name" class="fw-bold w-100" />
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-12 col-lg-6 o_setting_box">
-                            <div class="o_setting_left_pane">
-                                <field name="display_company_name" />
-                            </div>
-                            <div class="o_setting_right_pane">
-                                <label for="display_company_name" />
-                                <div class="text-muted">
-                                    Displays the company name in the title bar of the browser window
-                                    or in the title name on the status bar.
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-12 col-lg-6 o_setting_box">
-                            <div class="o_setting_left_pane">
-                                <i class="fa fa-copyright" role="img"
-                                    aria-label="Copyright information" title="Copyright information"></i>
-                            </div>
-                            <div class="o_setting_right_pane">
-                                <label for="copyright" class="o_light_label" />
-                                <div class="o_row">
-                                    <field name="copyright" />
-                                </div>
-                                <div class="text-muted">
-                                    Copyright information displayed in user menu items and footers.
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-12 col-lg-6 o_setting_box">
-                            <div class="o_setting_left_pane">
-                                <i class="fa fa-link" role="img" aria-label="Documentation URL"
-                                    title="Documentation URL"></i>
-                            </div>
-                            <div class="o_setting_right_pane">
-                                <label for="doc_url" />
-                                <div class="o_row">
-                                    <field name="doc_url" />
-                                </div>
-                                <div class="text-muted">
-                                    The document URL displayed in the user menu item and footer.
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-12 col-lg-6 o_setting_box">
-                            <div class="o_setting_left_pane">
-                                <i class="fa fa-link" role="img" aria-label="Support URL"
-                                    title="Support URL"></i>
-                            </div>
-                            <div class="o_setting_right_pane">
-                                <label for="support_url" />
-                                <div class="o_row">
-                                    <field name="support_url" />
-                                </div>
-                                <div class="text-muted">
-                                    The technical support URL displayed in the user menu item and
-                                    footer.
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-12 col-lg-6 o_setting_box">
-                            <div class="o_setting_left_pane">
-                                <i class="fa fa-picture-o" aria-label="Web Favorites Icon" />
-                            </div>
-                            <div class="o_setting_right_pane">
-                                <label for="favicon" string="Favorites Icon" />
-                                <div class="text-muted">
-                                    An icon that appears in the title bar or favorites of the
-                                    browser window.
-                                </div>
-                                <div class="content-group mt8">
-                                    <field name="favicon" widget="image"
-                                        class="float-start oe_avatar" />
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-12 col-lg-6 o_setting_box">
-                            <div class="o_setting_left_pane">
-                                <i class="fa fa-picture-o" aria-label="Company Logo" />
-                            </div>
-                            <div class="o_setting_right_pane">
-                                <label for="logo" />
-                                <div class="text-muted">
-                                    Company logo, which is used to display the website brand.
-                                </div>
-                                <div class="content-group mt8">
-                                    <field name="logo" widget="image" class="float-start oe_avatar" />
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-12 col-lg-6 o_setting_box">
-                            <div class="o_setting_left_pane">
-                                <i class="fa fa-picture-o" aria-label="Company Square Logo" />
-                            </div>
-                            <div class="o_setting_right_pane">
-                                <label for="square_logo" />
-                                <div class="text-muted">
-                                    Company Square Logo, It is used to display the website brand when the sidebar collapses.
-                                </div>
-                                <div class="content-group mt8">
-                                    <field name="square_logo" widget="image"
-                                        class="float-start oe_avatar" />
-                                </div>
-                            </div>
-                        </div>
-
-                    </block>
-
-                </div>
-
+            <div id="eist_apps" position="before">
                 <div id="theme_setting">
                     <block title="Theme Settings" name="eisterp_theme_setting_container">
                         <!-- <div class="col-12 col-lg-6 o_setting_box">
@@ -196,11 +54,9 @@
                             </div>
                         </div>
 
-                        <div class="col-12 col-lg-6 o_setting_box"
-                            invisible="not disable_theme_customizer">
+                        <div class="col-12 col-lg-6 o_setting_box" invisible="not disable_theme_customizer">
                             <div class="o_setting_left_pane">
-                                <i class="fa fa-diamond" role="img" aria-label="Main settings"
-                                    title="Main settings"></i>
+                                <i class="fa fa-diamond" role="img" aria-label="Main settings" title="Main settings"></i>
                             </div>
                             <div class="o_setting_right_pane">
                                 <span class="o_form_label">Main settings</span>
@@ -210,8 +66,7 @@
                                     <field name="main_app_load_method" required="1" />
                                 </div>
                                 <div class="content-group d-flex justify-content-between">
-                                    <label for="main_display_drawer_menu_button"
-                                        class="o_light_label" />
+                                    <label for="main_display_drawer_menu_button" class="o_light_label" />
                                     <field name="main_display_drawer_menu_button" required="1" />
                                 </div>
                                 <div class="content-group d-flex justify-content-between">
@@ -225,11 +80,9 @@
                             </div>
                         </div>
 
-                        <div class="col-12 col-lg-6 o_setting_box"
-                            invisible="not disable_theme_customizer">
+                        <div class="col-12 col-lg-6 o_setting_box" invisible="not disable_theme_customizer">
                             <div class="o_setting_left_pane">
-                                <i class="bi bi-palette" role="img" aria-label="Theme color"
-                                    title="Theme color"></i>
+                                <i class="bi bi-palette" role="img" aria-label="Theme color" title="Theme color"></i>
                             </div>
                             <div class="o_setting_right_pane">
                                 <label for="theme_color" class="o_light_label" />
@@ -245,11 +98,9 @@
                             </div>
                         </div>
 
-                        <div class="col-12 col-lg-6 o_setting_box"
-                            invisible="(not disable_theme_customizer) or ( not main_display_drawer_menu_button)">
+                        <div class="col-12 col-lg-6 o_setting_box" invisible="(not disable_theme_customizer) or ( not main_display_drawer_menu_button)">
                             <div class="o_setting_left_pane">
-                                <i class="bi bi-layout-sidebar-inset" role="img"
-                                    aria-label="Sidebar settings" title="Sidebar settings"></i>
+                                <i class="bi bi-layout-sidebar-inset" role="img" aria-label="Sidebar settings" title="Sidebar settings"></i>
                             </div>
                             <div class="o_setting_right_pane">
                                 <span class="o_form_label">Sidebar settings</span>
@@ -257,8 +108,7 @@
 
                                 </div>
                                 <div class="content-group d-flex justify-content-between">
-                                    <label for="sidebar_display_number_of_submenus"
-                                        class="o_light_label" />
+                                    <label for="sidebar_display_number_of_submenus" class="o_light_label" />
                                     <field name="sidebar_display_number_of_submenus" />
                                 </div>
                                 <div class="content-group d-flex justify-content-between">
@@ -292,8 +142,7 @@
                             </div>
                         </div>
 
-                        <div class="col-12 col-lg-6 o_setting_box"
-                            invisible="not disable_theme_customizer">
+                        <div class="col-12 col-lg-6 o_setting_box" invisible="not disable_theme_customizer">
                             <div class="o_setting_left_pane">
                                 <i class="bi bi-eye" role="img" aria-label="Views" title="Views"></i>
                             </div>
@@ -313,8 +162,7 @@
                             </div>
                         </div>
 
-                        <div class="col-12 col-lg-6 o_setting_box"
-                            invisible="not disable_theme_customizer">
+                        <div class="col-12 col-lg-6 o_setting_box" invisible="not disable_theme_customizer">
                             <div class="o_setting_left_pane">
                                 <i class="bi bi-window-desktop" role="img" aria-label="Views" title="Views"></i>
                             </div>
@@ -370,8 +218,7 @@
 
                         <div class="col-12 col-lg-6 o_setting_box" invisible="not login_page_display_support">
                             <div class="o_setting_left_pane">
-                                <i class="fa fa-life-ring" role="img" aria-label="Technical support text for the login page."
-                                    title="Technical support text for the login page."></i>
+                                <i class="fa fa-life-ring" role="img" aria-label="Technical support text for the login page." title="Technical support text for the login page."></i>
                             </div>
                             <div class="o_setting_right_pane">
                                 <label for="login_page_support_text" string="Technical support text" />
@@ -386,8 +233,7 @@
 
                         <div class="col-12 col-lg-6 o_setting_box" invisible="not login_page_display_support">
                             <div class="o_setting_left_pane">
-                                <i class="fa fa-link" role="img" aria-label="A link to technical support on the login page."
-                                    title="A link to technical support on the login page."></i>
+                                <i class="fa fa-link" role="img" aria-label="A link to technical support on the login page." title="A link to technical support on the login page."></i>
                             </div>
                             <div class="o_setting_right_pane">
                                 <label for="login_page_support_url" string="Technical support URL" />
