增加管线、设备、待办、物联网等几个模块扩展& 增加以上相关模块多语言支持

--- a/odoo_project/views/project_menus.xml
+++ b/odoo_project/views/project_menus.xml
@@ -15,7 +15,7 @@
     </menuitem>
 
 
-    <menuitem name="Monitor the large screen" id="menu_projects_large_screen" sequence="70" action="action_projects_large_screen" web_icon="odoo_project,static/description/large_screen.png" groups="project.group_project_manager,project.group_project_user" />
+<!--    <menuitem name="Monitor the large screen" id="menu_projects_large_screen" sequence="70" action="action_projects_large_screen" web_icon="odoo_project,static/description/large_screen.png" groups="project.group_project_manager,project.group_project_user" />-->
 
 
 
