--- a/odoo_dtu/views/dtu_menu_views.xml
+++ b/odoo_dtu/views/dtu_menu_views.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
+    <menuitem
+            id="iot_root_menu"
+            name="IOT"
+            web_icon="odoo_dtu,static/description/icon.png"
+            sequence="490"/>
+
         <menuitem
             id="dtu_data_collection_meu"
             name="DTU"
             action='action_dtu_data_collection'
-            parent="iot.iot_menu_root"
+            parent="odoo_dtu.iot_root_menu"
             sequence="0"/>
 </odoo>
